# llmwatch

./: .gitignore  GITHUB-PAGES.md  README.md  index.html  preview-dark.html  preview.html  preview.txt  pyproject.toml  styles.css
.github/workflows/: pages.yml
docs/: GITHUB-PAGES.md  index.html  preview-dark.html  preview.html  preview.txt
llmwatch/: __main__.py  cli.py  formatters.py  merge_stats.py  tui.py
llmwatch/collectors/: __init__.py  api_sessions.py  api_stats_store.py  ollama.py  processes.py  system.py
scripts/: capture-preview.py  install.sh  test_api_stats.py
