[project]
name = "llmwatch"
version = "1.1.0"
description = "Mac terminal monitor for RAM, disk I/O, and local LLM performance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Avinash Peyyety" }]
keywords = ["macos", "ollama", "opencode", "monitoring", "terminal", "llm", "ram"]
classifiers = [
  "Environment :: Console",
  "Operating System :: MacOS",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "psutil>=6.0.0",
  "rich>=13.7.0",
  "requests>=2.31.0",
]

[project.scripts]
llmwatch = "llmwatch.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmwatch*"]